<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.e_toma.PrincipalFragment" >

    <TextView
        android:id="@+id/textViewMaratoma"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/string_nenhuma_maratoma"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:id="@+id/layoutMedicao"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/textViewMaratoma"
        android:background="#EEEEEE"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:textAlignment="center" >

        <TextView
            android:id="@+id/textViewTituloParticipante"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stringMedicao"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/textValorMedido"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stringValor"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#FF4444" />
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/layoutRanking"
        android:layout_width="230dp"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/layoutMedicao"
        android:background="#EEEEEE"
        android:gravity="center_horizontal" 
        android:orientation="vertical"
        android:textAlignment="center">

        <TextView
            android:id="@+id/textTituloRanking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_ranking"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <ScrollView
            android:id="@+id/scrollRanking"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:id="@+id/textRanking"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="36dp"
                android:layout_marginRight="74dp"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </ScrollView>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/layoutDadosBebum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/textViewMaratoma"
        android:layout_toLeftOf="@id/layoutMedicao"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/fotoParticipante"
            android:layout_width="@dimen/width_foto_principal"
            android:layout_height="@dimen/height_foto_principal"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="0dp"
            android:contentDescription="@string/stringDescFoto"
            android:onClick="printScreen"
            android:src="@drawable/sem_foto_peq" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginTop="@dimen/margin_top_nome_participante"
            android:layout_toRightOf="@id/fotoParticipante"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textNome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_passe_a_tag"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/textTagID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/stringDescID"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/textPosicaao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge" />

        </LinearLayout>
    </RelativeLayout>
    
    <FrameLayout
        android:id="@+id/layoutGrafico"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/layoutDadosBebum"
        android:layout_toLeftOf="@id/layoutRanking" >

    </FrameLayout>
    

</RelativeLayout>